[gd_scene load_steps=2 format=3 uid="uid://b14lfx64ryd0i"]

[ext_resource type="Script" path="res://scenes/ui/home.gd" id="1_us0s6"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_us0s6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.85046e-07, 0.58805, 0.590802, 1)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 10.0
offset_right = 66.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_constants/separation = -5

[node name="DateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1/1/2024"
horizontal_alignment = 1

[node name="TimeElapsedLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "99h 99m 99s"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.139
anchor_right = 0.958
anchor_bottom = 0.861
offset_left = -0.160002
offset_top = -0.0800095
offset_right = 0.159973
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="LogLabel" type="Label" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Do something
Do not do something: 2h 30m"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.889
anchor_right = 0.958
anchor_bottom = 0.972
offset_left = -0.160002
offset_top = -0.0800171
offset_right = 0.159973
offset_bottom = 0.159973
grow_horizontal = 2
grow_vertical = 0

[node name="TextEdit" type="TextEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter text here"
middle_mouse_paste_enabled = false

[node name="LogButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Log"

[connection signal="pressed" from="HBoxContainer/LogButton" to="." method="_on_log_button_pressed"]
